# Casetext

./: README.md
Oksana /gcp-project/envs/dev/gke_cluster/: backend.tf  main.tf  terraform.tfvars  variables.tf
Oksana /gcp-project/gcp-project/: README.md
Oksana /gcp-project/gcp-project/envs/dev/gke_cluster/: provider.tf
Oksana /gcp-project/gcp-project/k8s/: deployment.yml
Oksana /gcp-project/k8s/: service.yml
Oksana /gcp-project/modules/gcp_vpc/: outputs.tf
Oksana /legal-term-api/: test.txt
Oksana /legal-term-api/legal-term-api/: Dockerfile  pyproject.toml
Oksana /legal-term-api/src/: api.py
