[tool.poetry]
name = "legal-term-api"
version = "0.1.0"
description = "Legal term API"
authors = ["conwaytext <conway@casetext.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = ">=0.14.0,<0.15.0" 


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
